# artnfact

./: .gitignore  database.py  db_conf.json  main.py  pyproject.toml  readme.md  utils.py
.cursor/: mcp.json
artnfact_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
